パッケージを追加できるように変更